--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -1,3 +1,19 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Degular", sans-serif;
+  font-style: normal;
+  font-optical-sizing: auto;
+}
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
+
 @font-face {
   font-family: 'Degular';
   src: url('./fonts/DegularDisplay-Bold.woff2') format('woff2');
@@ -93,16 +109,4 @@
     body {
       @apply bg-background text-foreground;
     }
-  }
-
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-  body {
-    font-family: "Degular", sans-serif;
-    font-style: normal;
-    font-optical-sizing: auto;
   }
